--- a/client/style/style.css
+++ b/client/style/style.css
@@ -24,11 +24,17 @@ body {
     color: white
 }
 
+#mainScreen {
+    width: 80%;
+    height: 100%;
+    position: absolute;
+}
+
 #mainCanvas {
     width: 100%;
     height: 100%;
     display: block;
-    position:absolute
+    /* position:absolute */
 }
 
 #otherCanvases {
@@ -55,7 +61,8 @@ body {
     z-index: 2;
     color: white;
     position: absolute;
-    bottom: 0; width: 80%;
+    bottom: 0;
+    width: 100%;
     text-align: center;
     font-size: 50px;
 }
