--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Virtual rubik's cube</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="static/style/style.css">
   </head>
   <body>
     <div id="controlsPanel">
@@ -18,6 +18,14 @@
       <!-- <span>FPS INFO</span>
       <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
       <span id="fpsInfo"></span> -->
+      {% if current_user.is_authenticated %}
+        <div>You are logged in as {{ current_user.username }}</div>
+        <a href="/logout">Logout</a>
+        {% else %}
+        <div>You are not logged in</div>
+        <a href="/login">Login</a><a href="/register">Register</a>
+        {% endif %}
+      </body>
     </div>
 
     <div id="mainScreen">
@@ -28,7 +36,7 @@
     <div id="otherCanvases"></div>
     <canvas id="otherCanvas"></canvas>
 
-    <script type='module' src="js/main.js"></script>
-    <script type='module' src="js/websocket.js"></script>
+    <script type='module' src="static/js/main.js"></script>
+    <script type='module' src="static/js/websocket.js"></script>
   </body>
 </html>
