--- a/templates/index.html
+++ b/templates/index.html
@@ -18,14 +18,15 @@
       <!-- <span>FPS INFO</span>
       <input type="range" min="5" max="60" value="60" class="slider" id="fpsSlider">
       <span id="fpsInfo"></span> -->
+      <div id="loginInfo">
       {% if current_user.is_authenticated %}
         <div>You are logged in as {{ current_user.username }}</div>
         <a href="/logout">Logout</a>
         {% else %}
         <div>You are not logged in</div>
-        <a href="/login">Login</a><a href="/register">Register</a>
+        <a href="/login">Login</a> <a href="/register">Register</a>
         {% endif %}
-      </body>
+      </div>
     </div>
 
     <div id="mainScreen">
