--- a/templates/login.html
+++ b/templates/login.html
@@ -4,12 +4,23 @@
         <title>Register</title>
     </head>
     <body>
-        login
-        <form action="/login" method="post">
+        <h2>{{ text }}</h2>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                {% for message in messages %}
+                {{ message }} <br>
+                {% endfor %}
+            {% endif %}
+        {% endwith %}
+        <form action="/{{text}}" method="post">
             <label for="username">Username</label>
+            <br>
             <input type="text" name="username" />
+            <br>
             <label for="password">Password:</label>
+            <br>
             <input type="password" name="password" />
+            <br>
             <button type="submit">Submit</button>
         </form>
     </body>
