--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
     </div>
 
     <div id="mainScreen">
-      <div  id="times">Times:</div>
+      <div  id="times"></div>
       <canvas id="mainCanvas"></canvas>
       <div id="timer">timer stopped</div>
     </div>
