--- a/templates/race.html
+++ b/templates/race.html
@@ -14,6 +14,7 @@
     {% endif %}
     <br>
     <canvas id="mainCanvas" style="width: 100%; height: 50%"></canvas>
+    <div id="otherCanvases" style="position:absolute; right: 0; top: 0; height: 100%; width: 30%;"></div>
 </body>
 <script type="module">
     import { io } from '/static/js/libs/socket.io.esm.min.js'
@@ -22,6 +23,8 @@
     const socket = io();
 
     const cube = new Cube(3, document.getElementById("mainCanvas"));
+    const ourUsername = "{{ current_user.username }}";
+    console.log(ourUsername);
 
     const lobby_id = {{ lobby_id }};
 
@@ -32,15 +35,49 @@
         const div = document.createElement("div");
         div.innerHTML = username;
         userList.appendChild(div);
-        users.set(username, { div: div, ready: false} );
+
+        // skip adding our cube
+        if (username == ourUsername) {
+            users.set(username, { div: div, ready: false} );
+            return;
+        };
+
+        const canvasDiv = document.createElement("div");
+        canvasDiv.style = "position: relative";
+        document.getElementById("otherCanvases").appendChild(canvasDiv);
+
+        const nameDiv = document.createElement("div");
+        nameDiv.style = "position: absolute; top: 0; left: 0; color: white;"
+        nameDiv.innerHTML = username;
+        canvasDiv.appendChild(nameDiv);
+
+        // create cube
+        // begin dup with drawAnotherCube in main
+        const canvas = document.createElement("canvas");
+        canvas.style = "width: 100%; height: 250px"
+        canvasDiv.appendChild(canvas);
+
+        const _cube = new Cube(3, canvas);
+        _cube.render()
+        // end dup
+
+        users.set(username, { div: div, cube: _cube, ready: false} );
     }
+
+    socket.on("lobby_move", function(data) {
+        const username = data.username;
+        const move = data.move;
+
+        const user = users.get(username);
+        user.cube.makeMove(move);
+    })
 
     // begin duplication with main.js
     document.addEventListener("keydown", event => {
         let move = keybinds.get(event.key);
-        // expand array of parameters with ...args
         if (move) {
             cube.makeMove(move);
+            socket.emit("lobby_move", { lobby_id: lobby_id, move: move });
         }
     });
     // end
