add mouse moves to cube_dev

--- a/templates/test.html
+++ b/templates/test.html
@@ -14,6 +14,7 @@
     const cube = new Cube(3, canvas);
     cube.init_camera_controls();
     cube.init_keyboard_controls();
+    cube.init_mouse_moves();
     window.cube = cube
 </script>
 </body>
