--- a/templates/test.html
+++ b/templates/test.html
@@ -15,8 +15,8 @@
     cube.init_camera_controls();
     cube.init_keyboard_controls();
     cube.init_mouse_moves();
-    cube.registerMoveCallback(move => console.log(move));
-    cube.registerCameraChangeCallback(position => console.log(position));
+    cube.onMove(move => console.log(move));
+    cube.onCamera(position => console.log(position));
     window.cube = cube
 </script>
 </body>
