rename new cube file

--- a/templates/test.html
+++ b/templates/test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <script type="module">
-    import { Cube } from '/static/js/cube_dev.js'
+    import { Cube } from '/static/js/cube_new.js'
 
     const canvas = document.getElementById("c")
     const cube = new Cube(3, canvas);
