--- a/templates/test.html
+++ b/templates/test.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <canvas id="c" style="height: 80%; width: 80%;"></canvas>
+    <div id="t"></div>
 </head>
 <body>
 <script type="module">
@@ -19,5 +20,6 @@
     cube.onCamera(position => console.log(position));
     window.cube = cube
 </script>
+<script src="/static/js/test.js" type="module"></script>
 </body>
 </html>
