--- a/templates/solve.html
+++ b/templates/solve.html
@@ -14,10 +14,13 @@
         const canvas = document.getElementById("c");
         const cube_size = {{ cube_size }};
         const cube = new Cube(cube_size, canvas);
+        const camera_changes = {{ camera_changes | tojson }};
 
         const div = document.getElementById("scramble");
         var scramble = {{ scramble | tojson }};
         var moves = {{ moves | tojson }};
+
+        console.log(camera_changes)
 
         scramble = scramble.split(' ')
         for (const move of scramble) {
@@ -41,13 +44,32 @@
             }
         }
 
-        // replay the solve
-        let lastTime = 0;
-        for (const [move, timestamp] of moves) {
-            await new Promise(r => setTimeout(r, timestamp - lastTime));
-            cube.makeMove(move)
-            lastTime = timestamp;
+        async function replayMoves() {
+            // replay the solve
+            let lastTime = 0;
+            for (const [move, timestamp] of moves) {
+                await new Promise(r => setTimeout(r, timestamp - lastTime));
+                cube.makeMove(move)
+                lastTime = timestamp;
+            }
         }
+
+        async function replayCamera() {
+            let lastTimeC = 0;
+            for (const [x, y, z, timestamp] of camera_changes) {
+                await new Promise(r => setTimeout(r, timestamp - lastTimeC));
+                console.log("ZMENA")
+                cube.camera.position.x = x;
+                cube.camera.position.y = y;
+                cube.camera.position.z = z;
+                cube.camera.lookAt(0, 0, 0);
+                cube.render();
+                lastTimeC = timestamp;
+            }
+        }
+
+        replayMoves();
+        replayCamera();
 
     </script>
 </html>
